fix monospace box spacing in tutorial

--- a/themes/rad/assets/sass/partials/_docs.scss
+++ b/themes/rad/assets/sass/partials/_docs.scss
@@ -103,8 +103,8 @@ main {
       }
 
       .mono {
-        background-color: inherit !important;
-	      margin: auto !important;
+        background-color: inherit;
+	      margin: auto;
       }
 
       pre {
